feat: added optional gleason score and PSA mapping (#38)
* feat: added gleason score mapping for OP (#34)

* feat: map Gleason Score from prostate module to Observation

* refactor: remove redundant check digit conversion

* refactor: extracted patient reference generation

* feat: strongly typed meldeanlass and added gleason observation to generated bundles

* ci: fix k8s test

* chore(release): 2.1.0-beta.1 [skip ci]

* added gleason score mapping for OP ([#34](https://github.com/miracum/obds-to-fhir/issues/34)) ([83d2591](https://github.com/miracum/obds-to-fhir/commit/83d25913bcaca776d911caa3c5a03ff1d862fd1e))

* added prerelease config ([#33](https://github.com/miracum/obds-to-fhir/issues/33)) ([#35](https://github.com/miracum/obds-to-fhir/issues/35)) ([f341c9f](https://github.com/miracum/obds-to-fhir/commit/f341c9f17da970f229891372bc7995368b0cbfc2))

* fix: null handling

* chore(release): 2.1.0-beta.2 [skip ci]

* null handling ([5432ada](https://github.com/miracum/obds-to-fhir/commit/5432ada6348e800d46a477f6ee62c68d857e6552))

* fix: npe

* chore(release): 2.1.0-beta.3 [skip ci]

## [2.1.0-beta.3](https://github.com/miracum/obds-to-fhir/compare/v2.1.0-beta.2...v2.1.0-beta.3) (2024-03-20)

### Bug Fixes

* npe ([9d82cbb](https://github.com/miracum/obds-to-fhir/commit/9d82cbb17e889a62b32e5ed9dc63fc7413e7c460))

* feat: completed gleason score mapping to include Diagnose and Verlauf Meldungen

* chore(release): 2.1.0-beta.4 [skip ci]

## [2.1.0-beta.4](https://github.com/miracum/obds-to-fhir/compare/v2.1.0-beta.3...v2.1.0-beta.4) (2024-03-24)

### Features

* completed gleason score mapping to include Diagnose and Verlauf Meldungen ([10ab281](https://github.com/miracum/obds-to-fhir/commit/10ab2811444df885683399941d394a51a3e19b06))

* feat: added mapping for PSA

* chore(release): 2.1.0-beta.5 [skip ci]

## [2.1.0-beta.5](https://github.com/miracum/obds-to-fhir/compare/v2.1.0-beta.4...v2.1.0-beta.5) (2024-03-24)

